--- a/week04-app/styles/globals.css
+++ b/week04-app/styles/globals.css
@@ -1,9 +1,20 @@
 html,
 body {
+  text-align: center;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.row{
+  flex-direction: row;
 }
 
 a {
